--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import 'leaflet.markercluster/dist/MarkerCluster.css';
 @import 'leaflet.markercluster/dist/MarkerCluster.Default.css';
 @import 'maplibre-gl/dist/maplibre-gl.css';
